[tool.poetry]
name = "apf-backend"
version = "0.1.0"
description = ""
authors = ["nikoro256"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.13.0"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
