[tool.poetry]
name = "apf-scraper"
version = "0.1.0"
description = "It`s scraper of atcoder_problem_finder"
authors = ["nikoro256"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
types-requests = "^2.32.0.20241016"
mypy = "^1.13.0"
beautifulsoup4 = "^4.12.3"
types-beautifulsoup4 = "^4.12.0.20241020"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
